--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,15 +1,9 @@
 <footer class="footer">
-    <small>
-        The <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-        by <a href="http://www.michaelhartl.com/">Michael Hartl</a>
-    </small>
-    </nav>
+    <nav>
         <ul>
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact", contact_path %></li>
-            <li><a href="http://news.railstutorial.org/">News</a></li>
+            <li><a href="https://www.shibaura-it.ac.jp">サイト</a></li>
         </ul>
     </nav>
 </footer>
-
-
