--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,92 @@
             <h1>
                 <%= gravatar_for @user %>
                 <%= @user.name %>
+                <%= "( ⌒,_ゝ⌒)" %>
             </h1>
         </section>
     </aside>
 </div>
+
+<h1>芝浦工業大学 時間割</h1>
+
+<table class="cp_table">
+  <thead>
+    <tr>
+      <th></th>
+      <th>月曜日</th>
+      <th>火曜日</th>
+      <th>水曜日</th>
+      <th>木曜日</th>
+      <th>金曜日</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>1</th>
+      <td label="上のth要素1"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素2"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素3"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素4"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素5"><p>ここに時間割を入れる</p></td>
+    </tr>
+    <tr>
+      <th>2</th>
+      <td label="上のth要素1"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素2"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素3"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素4"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素5"><p>ここに時間割を入れる</p></td>
+    </tr>
+    <tr>
+      <th>3</th>
+      <td label="上のth要素1"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素2"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素3"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素4"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素5"><p>ここに時間割を入れる</p></td>
+    </tr>
+    <tr>
+      <th>4</th>
+      <td label="上のth要素1"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素2"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素3"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素4"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素5"><p>ここに時間割を入れる</p></td>
+    </tr>
+    <tr>
+      <th>5</th>
+      <td label="上のth要素1"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素2"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素3"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素4"><p>ここに時間割を入れる</p></td>
+      <td label="上のth要素5"><p>ここに時間割を入れる</p></td>
+    </tr>
+  </tbody>
+</table>
+
+
+  <ul class="collapsible expandable">
+    <li>
+      <!--collapsible-headerで見える部分を作成-->
+      <div class="collapsible-header"></i>月曜日</div>
+      <!--collapsible-bodyでクリック後に見える部分を作成-->
+      <div class="collapsible-body"><span>DBからの時間割</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"></i>火曜日</div>
+      <div class="collapsible-body"><span>DBからの時間割</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"></i>水曜日</div>
+      <div class="collapsible-body"><span>DBからの時間割</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"></i>木曜日</div>
+      <div class="collapsible-body"><span>DBからの時間割</span></div>
+    </li>
+    <li>
+      <div class="collapsible-header"></i>金曜日</div>
+      <div class="collapsible-body"><span>DBからの時間割</span></div>
+    </li>
+  </ul>
 
