--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer class="footer">
     <nav>
         <ul>
-            <li><%= link_to "About", about_path %></li>
-            <li><%= link_to "Contact", contact_path %></li>
-            <li><a href="https://www.shibaura-it.ac.jp">サイト</a></li>
+            <li style="background-color:#FFFF00" colspan="2"><%= link_to "About", about_path %></li>
+            <li style="background-color:#FFFF00" colspan="2"><%= link_to "Contact", contact_path %></li>
+            <li style="background-color:#FFFF00" colspan="2"><a href="https://www.shibaura-it.ac.jp">サイト</a></li>
         </ul>
     </nav>
 </footer>
