--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,7 +11,7 @@
 $gray-medium-light: #eaeaea;
 /* universal */
 body {
-    padding-top: 60px;
+    padding-top: 120px;
 }
 
 section {
@@ -36,7 +36,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 8em;
     letter-spacing: -2px;
     margin-bottom: 30px;
     text-align: center;
@@ -53,7 +53,7 @@ h2 {
 }
 
 p {
-    font-size: 1.1em;
+    font-size: 2.0em;
     line-height: 1.7em;
 }
 
@@ -80,12 +80,12 @@ p {
 /* footer */
 
 footer {
-    margin-top: 45px;
+    margin-top: 10px;
     padding-top: 5px;
     border-top: 1px solid $gray-medium-light;
     color: $gray-light;
     a {
-        color: $gray;
+        color: $gray-darker;
         &:hover {
             color: $gray-darker;
         }
