--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,20 +3,19 @@
         <%= link_to "マイスケジュール", root_path , id: "logo" %>
         <nav>
             <ul class="nav navbar-nav navbar-right">
-                <li><%= link_to "ホーム", root_path %></li>
-                <li><%= link_to "ヘルプ", help_path %></li>
+                <li style="background-color:#FFFF00" colspan="2"><%= link_to "ホーム", root_path %></li>
+                <li style="background-color:#FFFF00" colspan="2"><%= link_to "お問合せ", help_path %></li>
                 <% if logged_in? %>
-                    <li><%= link_to "ユーザー", users_path %></li>
+                    <li style="background-color:#FFFF00" colspan="2"><%= link_to "ユーザー", users_path %></li>
                     <li class="dropdown">
                         <a href='#' class="dropdown-toggle" data-toggle="dropdown">
                             Account <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><%= link_to "プロフィール", current_user %></li>
-                            <li><%= link_to "セッティング", edit_user_path(current_user) %></li>
-                            <li class="divider"></li>
-                            <li>
-                                <%= link_to "ログアウト", logout_path, method: :delete %>
+                            <li class="waves-effect waves-light btn"><%= link_to "プロフィール", current_user %></li>
+                            <li class="waves-effect waves-light btn"><%= link_to "セッティング", edit_user_path(current_user) %></li>
+                            <li class="waves-effect waves-light btn">
+                                <%= link_to " ログアウト", logout_path, method: :delete %>
                             </li>
                         </ul>
                     </li>
