--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,5 @@
 <% provide(:title, "Help") %>
-<h1>Help</h1>
-<p>  Get help on the Ruby on Rails Tutorial at the
-  <a href="https://railstutorial.jp/help">Rails Tutorial help section</a>
-  To get help on this sample app, see the
-  <a href="https://railstutorial.jp/#ebook"><em>Ruby on Rails Tutorial</em>
-  book</a>
-</p>
+<h1>お問合せ</h1>
+<p>第１０班</p>
+<p>gmail:arashi50.kogii at gmail.com</p>
+<p>まで</p>
