--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -58,33 +58,36 @@
 
 
 <ul class="collapsible expandable">
-    <li>
-      <div class="collapsible-header"></i>月曜日</div>
-      <% @mondays.each do |monday| %>
-        <div class="collapsible-body"><span>
+  <li>
+    <div class="collapsible-header"></i>月曜日</div>
+    <% @mondays.each do |monday| %>
+      <div class="collapsible-body"><span>
           <%= monday.name %>
           <%= monday.term %>
           <%= monday.genre %>
-          </span></div>
+          <%= monday.period %>時限目
+        </span></div>
       <% end %>
-    </li>
-    <li>
-      <div class="collapsible-header"></i>火曜日</div>
-      <% @tuesdays.each do |tuesday| %>
-        <div class="collapsible-body"><span>
+  </li>
+  <li>
+    <div class="collapsible-header"></i>火曜日</div>
+    <% @tuesdays.each do |tuesday| %>
+      <div class="collapsible-body"><span>
           <%= tuesday.name %>
           <%= tuesday.term %>
           <%= tuesday.genre %>
-          </span></div>
+          <%= tuesday.period %>時限目
+        </span></div>
       <% end %>
-    </li>
-    <li>
-      <div class="collapsible-header"></i>水曜日</div>
-      <% @wednesdays.each do |wednesday| %>
-        <div class="collapsible-body"><span>
+  </li>
+  <li>
+    <div class="collapsible-header"></i>水曜日</div>
+    <% @wednesdays.each do |wednesday| %>
+      <div class="collapsible-body"><span>
           <%= wednesday.name %>
           <%= wednesday.term %>
           <%= wednesday.genre %>
+          <%= wednesday.period %>時限目
           </span></div>
       <% end %>
     </li>
@@ -95,6 +98,7 @@
           <%= thursday.name %>
           <%= thursday.term %>
           <%= thursday.genre %>
+          <%= thursday.period %>時限目
           </span></div>
       <% end %>
     </li>
@@ -105,6 +109,7 @@
           <%= friday.name %>
           <%= friday.term %>
           <%= friday.genre %>
+          <%= friday.period %>時限目
           </span></div>
       <% end %>
     </li>
