プロフィール画像の変更

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,9 @@
 <li>
-    <%= gravatar_for user, size: 50 %>
+    <% if user.image? %>
+        <%= image_tag user.image.url, :size =>'160x160' %>
+    <% else %>
+        <%= image_tag "default.jpg", :size =>'160x160' %>
+    <% end %>
     <%= link_to user.name, user %>
     <% if current_user.admin? && !current_user?(user) %>
         | <%= link_to "delete", user, method: :delete,
