--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for(@user, url: yield(:url)) do |f| %>
     <%= render 'shared/error_messages', object: @user %>
-    
+    <%= f.label :image, "ユーザー画像" %>
     <% if @user.image? %>
-        <%= image_tag @user.image.url %>
+        <%= image_tag @user.image.url, :size => '160x160' %>
     <% else %>
-        <%= image_tag("/images/default.jpg") %>
+        <%= image_tag "default.jpg", :size =>'160x160' %>
     <% end %>
     <%= f.file_field :image %>
     <%= f.label "お名前" %>
