時間割から講義情報へのリンク

--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -65,6 +65,7 @@
           <%= monday.name %>
           <%= monday.term %>
           <%= monday.genre %>
+          <%= link_to "詳細" ,"/lectures/show/" + monday.id.to_s %>
           </span></div>
       <% end %>
     </li>
