時間割から講義情報へのリンク

--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -76,6 +76,7 @@
           <%= tuesday.name %>
           <%= tuesday.term %>
           <%= tuesday.genre %>
+          <%= link_to "詳細" ,"/lectures/show/" + tuesday.id.to_s %>
           </span></div>
       <% end %>
     </li>
@@ -86,6 +87,7 @@
           <%= wednesday.name %>
           <%= wednesday.term %>
           <%= wednesday.genre %>
+          <%= link_to "詳細" ,"/lectures/show/" + wednesday.id.to_s %>
           </span></div>
       <% end %>
     </li>
@@ -96,6 +98,7 @@
           <%= thursday.name %>
           <%= thursday.term %>
           <%= thursday.genre %>
+          <%= link_to "詳細" ,"/lectures/show/" + thursday.id.to_s %>
           </span></div>
       <% end %>
     </li>
@@ -106,6 +109,7 @@
           <%= friday.name %>
           <%= friday.term %>
           <%= friday.genre %>
+          <%= link_to "詳細" ,"/lectures/show/" + friday.id.to_s %>
           </span></div>
       <% end %>
     </li>
