時間割表示の途中

--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -14,6 +14,7 @@
   </thead>
   <tbody>
     <tr>
+    <%= @lecture_data %>
       <th>1</th>
       <td label="上のth要素1"><p>ここに時間割を入れる</p></td>
       <td label="上のth要素2"><p>ここに時間割を入れる</p></td>
