それぞれユーザの時間割DBを表示するようにした

--- a/app/views/timetables/index.html.erb
+++ b/app/views/timetables/index.html.erb
@@ -37,6 +37,7 @@
           <%= monday.period %>時限目
           <!-- /lectures/show/講義のid 講義情報ページに飛ぶ 以下同じ -->
           <%= link_to "詳細" ,"/lectures/show/" + monday.id.to_s %>  
+          <%= button_to "この授業を追加", {controller: 'timetables', action: 'update'}, {method: :get, params:{lecture_id: monday.id }} %>
         </span></div>
       <% end %>
   </li>
@@ -49,6 +50,7 @@
           <%= tuesday.genre %>
           <%= tuesday.period %>時限目
           <%= link_to "詳細" ,"/lectures/show/" + tuesday.id.to_s %>
+          <%= button_to "この授業を追加", {controller: 'timetables', action: 'update'}, {method: :get, params:{lecture_id: tuesday.id }} %>
         </span></div>
       <% end %>
   </li>
@@ -61,6 +63,7 @@
           <%= wednesday.genre %>
           <%= wednesday.period %>時限目
           <%= link_to "詳細" ,"/lectures/show/" + wednesday.id.to_s %>
+          <%= button_to "この授業を追加", {controller: 'timetables', action: 'update'}, {method: :get, params:{lecture_id: wednesday.id }} %>
           </span></div>
       <% end %>
     </li>
@@ -73,6 +76,7 @@
           <%= thursday.genre %>
           <%= thursday.period %>時限目
           <%= link_to "詳細" ,"/lectures/show/" + thursday.id.to_s %>
+          <%= button_to "この授業を追加", {controller: 'timetables', action: 'update'}, {method: :get, params:{lecture_id: thursday.id }} %>
           </span></div>
       <% end %>
     </li>
@@ -85,6 +89,7 @@
           <%= friday.genre %>
           <%= friday.period %>時限目
           <%= link_to "詳細" ,"/lectures/show/" + friday.id.to_s %>
+          <%= button_to "この授業を追加", {controller: 'timetables', action: 'update'}, {method: :get, params:{lecture_id: friday.id }} %>
           </span></div>
       <% end %>
     </li>
