--- a/app/views/lectures/show.html.erb
+++ b/app/views/lectures/show.html.erb
@@ -6,5 +6,6 @@
   <li>Day     : <%= @lecture[:day]%></li>
   <li>Period  : <%= @lecture[:period] %></li>
   <!-- lectures/review/講義のid レビューに飛ぶ(仮設置)-->
-  <li>レビュー: <%= link_to "詳細" ,"/lectures/review/" + @lecture[:id].to_s %></li>  
+  <li>レビュー: <%= link_to "詳細" ,"/reviews/show/" + @lecture[:id].to_s %></li>
+  <li><%= link_to "マイスケジュールへ" ,"/timetables/index" %></li>  
 </ul>
