--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "About") %>
 <h1>About</h1>
 <p>
-  <a class="waves-effect waves-light btn">ABOUTTTT</a>
+  <a class="waves-effect waves-light btn">ABOUT</a>
 </p>
