--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,5 +2,5 @@
     <h1>自己管理スケジュールアプリ</h1>
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
     </div>
-    <%= image_tag "top.jpg",:size =>'1080x720' %></p>
+    <div class="box"><p><%= image_tag "top.jpg" %></p></div>
 </div>
