--- a/app/assets/stylesheets/hanao.scss
+++ b/app/assets/stylesheets/hanao.scss
@@ -152,8 +152,8 @@ fieldset:disabled a.btn {
 .btn-info:not(:disabled):not(.disabled):active, .btn-info:not(:disabled):not(.disabled).active,
 .show > .btn-info.dropdown-toggle {
   color: #fff;
-  background-color: #117a8b;
-  border-color: #10707f;
+  background-color: #fff;
+  border-color: #fff;
 }
 .dropright .dropdown-toggle:empty::after {
   margin-left: 0;
@@ -453,7 +453,7 @@ fieldset:disabled a.btn {
 }
 
 .nav-link.disabled {
-  color: #6c757d;
+  color: #FFFFF0;
   pointer-events: none;
   cursor: default;
 }
