--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,6 @@
 
 // materializecssをインポートする
 @import "materialize/components/color-variables";
-$primary-color: color("blue", "lighten-2") !default;
+$primary-color: color("brown", "lighten-2") !default;
 $secondary-color: color("yellow", "base") !default;
 @import "materialize";
