--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
     <nav>
         <ul>
-            <li style="background-color:#FFFF00" colspan="2"><a href="https://www.shibaura-it.ac.jp">サイト</a></li>
+            <li style="background-color:white" colspan="2"><a href="https://www.shibaura-it.ac.jp">サイト</a></li>
         </ul>
     </nav>
 </footer>
