--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,10 +3,10 @@
         <%= link_to "マイスケジュール", root_path , id: "logo" %>
         <nav>
             <ul class="nav navbar-nav navbar-right">
-                <li style="background-color:#FFFF00" colspan="2"><%= link_to "ホーム", root_path %></li>
-                <li style="background-color:#FFFF00" colspan="2"><%= link_to "お問合せ", help_path %></li>
+                <li style="background-color:black" colspan="2"><%= link_to "ホーム", root_path %></li>
+                <li style="background-color:black" colspan="2"><%= link_to "お問合せ", help_path %></li>
                 <% if logged_in? %>
-                    <li style="background-color:#FFFF00" colspan="2"><%= link_to "ユーザー", users_path %></li>
+                    <li style="background-color:black" colspan="2"><%= link_to "ユーザー", users_path %></li>
                     <li class="dropdown">
                         <a href='#' class="dropdown-toggle" data-toggle="dropdown">
                             Account <b class="caret"></b>
