--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,6 +14,7 @@ body {
     padding-top: 100px;
     background-color: #FAE5F6;
     background-size: cover;
+    width: 100%; height: 100%;
 
 }
 
@@ -35,6 +36,8 @@ textarea {
         margin-bottom: 10px;
     }
 }
+.box
+ img { width: 100%; height: 100%;}
 
 /* typography */
 
@@ -48,6 +51,7 @@ h1 {
     margin-bottom: 120px;
     text-align: center;
     color: $gray-light;
+    width: 100%; height: 100%;
 }
 
 .center h1 {
@@ -62,15 +66,6 @@ h2 {
     text-align: center;
     font-weight: normal;
     color: $gray-darker;
-}
-
-.center img {
-    vertical-align: bottom;
-    background-size: cover;
-    background-image: url(“top.jpg”);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-
 }
 
 /* header */
