--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,5 @@
     <h1>自己管理スケジュールアプリ</h1>
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
     </div>
-    <div class="box"><p><%= image_tag "top.jpg" %></p></div>
-
+    <div class="box"><p><%= image_tag "inu.jpg" %></p></div>
 </div>
